added the photos

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 <li><button type="button" onclick="changeLang()">BandBR</button></li>
             </ul>
         </nav>
-        <h1>Nicolas Klein</h1>
+        <h1>Nicolas<br>Klein</h1>
     </header>
 
     <main>
@@ -30,23 +30,51 @@
             <div id="socials">
                 <img src="images/my-photo.jpg" alt="Foto Pessoa">
                 <ul>
-                    <li>contatonkfa@gmail.com</li>
                     <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu GitHub</a></li>
-                    <li><a href="#" target="_blank">Meu Instagram</a></li>
+                    <li><a href="#" target="_blank">Meu Linkedin</a></li>
+                    <li>contatonkfa@gmail.com</li>
+                    <li>(44) 99766-6224</li>
+
                 </ul>
             </div>
 
-            <h3>Olá Mundo! EMOJI</h3>
-            <ul>
-                <li>Meu nome é <strong>Nicolas Klein</strong> e tenho 17 anos.</li>
-                <li><strong>Comecei a estudar programação</strong> em outubro de <strong>2022</strong>.</li>
-                <li>Estou <strong>finalizando o ensino médio</strong> e pretendo cursar <strong>Analise e Desenvolvimento de Sistemas</strong>.</li>
-                <li>Faço projetos utilizando linguagens como: <strong>JavaScript, HTML, CSS e Python</strong>.</li>
-                <li>Utilizo em meus projetos, tecnologias como <strong>Node.js e MongoDB</strong>.</li>
-                <li>Meu principal hobby é jogar, meu gênero favorito é luta.</li>
-            </ul>
+            <div id="text-about">
+                <ul>
+                    <li>Meu nome é <strong>Nicolas Klein</strong> e tenho 17 anos.</li>
+                    <li>Nasci e <strong>moro em Maringá-PR</strong></li>
+                    <li>Possuo <strong>fluência em inglês</strong></li>
+                    <li><strong>Comecei a estudar programação</strong> em outubro de <strong>2022</strong>.</li>
+                    <li>Estou <strong>finalizando o ensino médio</strong> e pretendo cursar <strong>Analise e Desenvolvimento de Sistemas</strong>.</li>
+                    <li>Faço projetos utilizando linguagens como: <strong>JavaScript, HTML, CSS e Python</strong>.</li>
+                    <li>Utilizo em meus projetos, tecnologias como <strong>Node.js e MongoDB</strong>.</li>
+                    <li>Meu principal hobby é jogar, meu gênero favorito é luta.</li>
+                </ul>
+            </div>
         </section>
 
+        <section id="abilities">
+            <h2>Habilidades</h2>
+
+            <div id="python">
+                <img src="images/python-logo.png" alt="Logo Python">
+                <p>Python foi a primeira linguagem de programação que eu estudei, desenvolvi algumas interfaces gráficas utilizando a biblioteca do PyQT.</p>
+            </div>
+
+            <div id="html-css">
+                <img src="images/html-css-logo.png" alt="Logo HTML e CSS">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, eveniet! Voluptates quibusdam perferendis.</p>
+            </div>
+            <br>
+            <div id="js">
+                <img src="images/javascript-logo.png" alt="Logo JavaScript">
+                <p>JavaScript é a principal linguagem que estudo hoje em dia. Utilizo a linguagem em sites e aplicações backend.</p>
+            </div>
+
+            <div id="node">
+                <img src="images/nodejs-logo.png" alt="Logo Node.js">
+                <p>Node.js é a principal ferramenta que estou estudando atualmente para integrar com o JavaScript</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
