made the "abilities" styles

--- a/src/index.html
+++ b/src/index.html
@@ -57,22 +57,17 @@
 
             <div id="python">
                 <img src="images/python-logo.png" alt="Logo Python">
-                <p>Python foi a primeira linguagem de programação que eu estudei, desenvolvi algumas interfaces gráficas utilizando a biblioteca do PyQT.</p>
+                <p>Python foi a primeira linguagem de programação que eu estudei. Consigo desenvolver interfaces gráficas e automações de atividades. Tenho conhecimento em bibliotecas como PyQT, PyAutoGui e Selenium.</p>
             </div>
 
             <div id="html-css">
+                <p>HTML e CSS são as principais linguagens que eu utilizo para estruturar e estilizar meus sites. Utilizo ferramentas como o Figma para uma pré-estruturação dos meus sites.</p>
                 <img src="images/html-css-logo.png" alt="Logo HTML e CSS">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, eveniet! Voluptates quibusdam perferendis.</p>
-            </div>
-            <br>
-            <div id="js">
-                <img src="images/javascript-logo.png" alt="Logo JavaScript">
-                <p>JavaScript é a principal linguagem que estudo hoje em dia. Utilizo a linguagem em sites e aplicações backend.</p>
             </div>
 
-            <div id="node">
-                <img src="images/nodejs-logo.png" alt="Logo Node.js">
-                <p>Node.js é a principal ferramenta que estou estudando atualmente para integrar com o JavaScript</p>
+            <div id="js">
+                <img src="images/javascript-logo.png" alt="Logo JavaScript">
+                <p>JavaScript é a principal linguagem que estudo hoje em dia. Utilizo ela tanto em sites quanto integrada ao "Node.js" para aplicações backend. Tenho conhecimento em server e banco de dados, para isso, utilizo o Express juntamente ao MongoDB</p>
             </div>
         </section>
     </main>
