--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,16 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <header>
+    <header id="home-page">
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Sobre Mim</li>
-                <li>Habilidades</li>
-                <li>Projetos</li>
+                <li><a href="#home-page">Home</a></li>
+                <li><a href="#about-me">Sobre Mim</a></li>
+                <li><a href="#abilities">Habilidades</a></li>
+                <li><a href="#projects">Projetos</a></li>
                 <li><button type="button" onclick="changeLang()">BandEN</button></li>
                 <li><button type="button" onclick="changeLang()">BandBR</button></li>
             </ul>
@@ -28,7 +29,7 @@
             <h2>Sobre Mim</h2>
 
             <div id="socials">
-                <img src="images/my-photo.jpg" alt="Foto Pessoa">
+                <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
                 <ul>
                     <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu GitHub</a></li>
                     <li><a href="#" target="_blank">Meu Linkedin</a></li>
@@ -56,20 +57,49 @@
             <h2>Habilidades</h2>
 
             <div id="python">
-                <img src="images/python-logo.png" alt="Logo Python">
-                <p>Python foi a primeira linguagem de programação que eu estudei. Consigo desenvolver interfaces gráficas e automações de atividades. Tenho conhecimento em bibliotecas como PyQT, PyAutoGui e Selenium.</p>
+                <img src="images/logos/python-logo.png" alt="Logo Python">
+                <p><strong>Python</strong> foi a primeira linguagem de programação que eu estudei. Consigo desenvolver <strong>interfaces gráficas e automações de atividades</strong>. Tenho conhecimento em bibliotecas como <strong>Pandas, PyQT, PyAutoGui e Selenium</strong>.</p>
             </div>
 
             <div id="html-css">
-                <p>HTML e CSS são as principais linguagens que eu utilizo para estruturar e estilizar meus sites. Utilizo ferramentas como o Figma para uma pré-estruturação dos meus sites.</p>
-                <img src="images/html-css-logo.png" alt="Logo HTML e CSS">
+                <p><strong>HTML e CSS</strong> são as principais linguagens que eu utilizo para <strong>estruturar e estilizar meus sites</strong>. Utilizo ferramentas como o <strong>Figma</strong> para uma <strong>pré-estruturação dos meus sites</strong>.</p>
+                <img src="images/logos/html-css-logo.png" alt="Logo HTML e CSS">
             </div>
 
             <div id="js">
-                <img src="images/javascript-logo.png" alt="Logo JavaScript">
-                <p>JavaScript é a principal linguagem que estudo hoje em dia. Utilizo ela tanto em sites quanto integrada ao "Node.js" para aplicações backend. Tenho conhecimento em server e banco de dados, para isso, utilizo o Express juntamente ao MongoDB</p>
+                <img src="images/logos/javascript-logo.png" alt="Logo JavaScript">
+                <p><strong>JavaScript</strong> é a <strong>principal linguagem</strong> que estudo hoje em dia. Utilizo ela tanto em <strong>sites</strong> quanto <strong>integrada ao "Node.js"</strong> para aplicações backend. Tenho conhecimento em <strong>server e banco de dados</strong>, para isso, utilizo o <strong>Express</strong> juntamente ao <strong>MongoDB</strong></p>
+            </div>
+        </section>
+
+        <section id="projects">
+            <h2>Projetos</h2>
+
+            <div id="node-login">
+                <h3>Login com Node.js</h3>
+                <p>Tela de login desenvolvida utilizando o framework <strong>"Express"</strong> no <strong>Node.js</strong> para o servidor e o banco de dados do <strong>MongoDB Atlas</strong> para salvar os dados de usuario. O site e a estilização foram feitas utilizando <strong>HTML e CSS</strong>.</p>
+                <p class="project-btn"><a href="#" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">Ver codigo</a></p>
+                <img src="images/projects/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
+            </div>
+
+            <div id="pomodoro-web">
+                <h3>Site Pomodoro</h3>
+                <p>Site para estudos que usa o metodo "Pomodoro". Site desenvolvido utilizando <strong>HTML, CSS e JavaScript</strong>. O site consiste em um timer customizado para melhor efetividade do seu estudo e uma lista "To-do" que ajuda na programação de tarefas.</p>
+                <p class="project-btn"><a href="https://nicolaskleinaraujo.github.io/pomodoro-web/" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/pomodoro-web" target="_blank">Ver codigo</a></p>
+                <img src="images/projects/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
+            </div>
+
+            <div id="todo-list">
+                <h3>To-do List Python</h3>
+                <p>Lista "To-do" feita utilizando <strong>Python</strong>. A interface grafica foi feita utilizando a biblioteca <strong>"PyQT"</strong> e o salvamento dos dados foi feito utilizando o <strong>"Pandas"</strong> em um arquivo <strong>"csv"</strong>. A lista "To-do" facilita a programação de tarefas cotidianas.</p>
+                <p class="project-btn"><a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">Ver codigo</a></p>
+                <img src="images/projects/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
             </div>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2023 - Site desenvolvido por <a href="https://github.com/nicolaskleinaraujo/">Nicolas Klein</a></p>
+    </footer>
 </body>
 </html>
