scroll to home button created

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <header id="home-page">
+    <header>
         <nav>
             <ul>
-                <li><a href="#home-page">Home</a></li>
                 <li><a href="#about-me">Sobre Mim</a></li>
                 <li><a href="#abilities">Habilidades</a></li>
                 <li><a href="#projects">Projetos</a></li>
-                <li><button type="button" onclick="changeLang()">BandEN</button></li>
                 <li><button type="button" onclick="changeLang()">BandBR</button></li>
+                <li><button type="button" onclick="changeLang()">BandEN</button></li>
             </ul>
         </nav>
         <h1>Nicolas<br>Klein</h1>
@@ -31,10 +30,11 @@
             <div id="socials">
                 <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
                 <ul>
-                    <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu GitHub</a></li>
+                    <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu Github</a></li>
                     <li><a href="#" target="_blank">Meu Linkedin</a></li>
+                    <li><a href="https://wa.me/5544997666224" target="_blank">Meu Whatsapp</a></li>
                     <li>contatonkfa@gmail.com</li>
-                    <li>(44) 99766-6224</li>
+                    <li>+55 44 99766-6224</li>
 
                 </ul>
             </div>
@@ -98,8 +98,12 @@
         </section>
     </main>
 
+    <div id="scrollBtn"><span class="material-symbols-outlined">arrow_upward</span></div>
+
     <footer>
-        <p>&copy; 2023 - Site desenvolvido por <a href="https://github.com/nicolaskleinaraujo/">Nicolas Klein</a></p>
+        <p>&copy; 2023 - Site desenvolvido por <a href="https://github.com/nicolaskleinaraujo/" target="_blank"><strong>Nicolas Klein</strong></a>.</p>
     </footer>
+
+    <script src="funcs.js"></script>
 </body>
 </html>
