--- a/src/index.html
+++ b/src/index.html
@@ -10,99 +10,170 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#about-me">Sobre Mim</a></li>
-                <li><a href="#abilities">Habilidades</a></li>
-                <li><a href="#projects">Projetos</a></li>
-                <li><button type="button" onclick="changeLang()">BandBR</button></li>
-                <li><button type="button" onclick="changeLang()">BandEN</button></li>
-            </ul>
-        </nav>
-        <h1>Nicolas<br>Klein</h1>
-    </header>
 
-    <main>
-        <section id="about-me">
-            <h2>Sobre Mim</h2>
-
-            <div id="socials">
-                <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
+    <div id="pt-br">
+        <header id="ptHome">
+            <nav>
                 <ul>
-                    <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu Github</a></li>
-                    <li><a href="#" target="_blank">Meu Linkedin</a></li>
-                    <li><a href="https://wa.me/5544997666224" target="_blank">Meu Whatsapp</a></li>
-                    <li>contatonkfa@gmail.com</li>
-                    <li>+55 44 99766-6224</li>
-
+                    <li><a href="#about-me">Sobre Mim</a></li>
+                    <li><a href="#abilities">Habilidades</a></li>
+                    <li><a href="#projects">Projetos</a></li>
+                    <li><button type="button" onclick="changeToPT()"><img src="images/others/br-flag.png" alt="Bandeira do Brasil"></button></li>
+                    <li><button type="button" onclick="changeToEN()"><img src="images/others/us-flag.png" alt="Bandeira dos Estados Unidos"></button></li>
                 </ul>
-            </div>
+            </nav>
+            <h1>Nicolas<br>Klein</h1>
+        </header>
+        <main>
+            <section id="about-me">
+                <h2>Sobre Mim</h2>
+                <div id="socials">
+                    <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
+                    <ul>
+                        <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu Github</a></li>
+                        <li><a href="#" target="_blank">Meu Linkedin</a></li>
+                        <li><a href="https://wa.me/5544997666224" target="_blank">Meu Whatsapp</a></li>
+                        <li>contatonkfa@gmail.com</li>
+                        <li>+55 44 99766-6224</li>
+                    </ul>
+                </div>
+                <div id="text-about">
+                    <ul>
+                        <li>Meu nome é <strong>Nicolas Klein</strong> e tenho 17 anos.</li>
+                        <li>Nasci e <strong>moro em Maringá-PR</strong></li>
+                        <li>Possuo <strong>fluência em inglês</strong></li>
+                        <li><strong>Comecei a estudar programação</strong> em outubro de <strong>2022</strong>.</li>
+                        <li>Estou <strong>finalizando o ensino médio</strong> e pretendo cursar <strong>Analise e Desenvolvimento de Sistemas</strong>.</li>
+                        <li>Faço projetos utilizando linguagens como: <strong>JavaScript, HTML, CSS e Python</strong>.</li>
+                        <li>Utilizo em meus projetos, tecnologias como <strong>Node.js e MongoDB</strong>.</li>
+                        <li>Meu principal hobby é jogar, meu gênero favorito é luta.</li>
+                    </ul>
+                </div>
+            </section>
+            <section id="abilities">
+                <h2>Habilidades</h2>
+                <div id="python">
+                    <img src="images/logos/python-logo.png" alt="Logo Python">
+                    <p><strong>Python</strong> foi a primeira linguagem de programação que eu estudei. Consigo desenvolver <strong>interfaces gráficas e automações de atividades</strong>. Tenho conhecimento em bibliotecas como <strong>Pandas, PyQT, PyAutoGui e Selenium</strong>.</p>
+                </div>
+                <div id="html-css">
+                    <p><strong>HTML e CSS</strong> são as principais linguagens que eu utilizo para <strong>estruturar e estilizar meus sites</strong>. Utilizo ferramentas como o <strong>Figma</strong> para uma <strong>pré-estruturação dos meus sites</strong>.</p>
+                    <img src="images/logos/html-css-logo.png" alt="Logo HTML e CSS">
+                </div>
+                <div id="js">
+                    <img src="images/logos/javascript-logo.png" alt="Logo JavaScript">
+                    <p><strong>JavaScript</strong> é a <strong>principal linguagem</strong> que estudo hoje em dia. Utilizo ela tanto em <strong>sites</strong> quanto <strong>integrada ao "Node.js"</strong> para aplicações backend. Tenho conhecimento em <strong>server e banco de dados</strong>, para isso, utilizo o <strong>Express</strong> juntamente ao <strong>MongoDB</strong></p>
+                </div>
+            </section>
+            <section id="projects">
+                <h2>Projetos</h2>
+                <div id="node-login">
+                    <h3>Login com Node.js</h3>
+                    <p>Tela de login desenvolvida utilizando o framework <strong>"Express"</strong> no <strong>Node.js</strong> para o servidor e o banco de dados do <strong>MongoDB Atlas</strong> para salvar os dados de usuario. O site e a estilização foram feitas utilizando <strong>HTML e CSS</strong>.</p>
+                    <p class="project-btn"><a href="#" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">Ver codigo</a></p>
+                    <img src="images/projects/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
+                </div>
+                <div id="pomodoro-web">
+                    <h3>Site Pomodoro</h3>
+                    <p>Site para estudos que usa o metodo "Pomodoro". Site desenvolvido utilizando <strong>HTML, CSS e JavaScript</strong>. O site consiste em um timer customizado para melhor efetividade do seu estudo e uma lista "To-do" que ajuda na programação de tarefas.</p>
+                    <p class="project-btn"><a href="https://nicolaskleinaraujo.github.io/pomodoro-web/" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/pomodoro-web" target="_blank">Ver codigo</a></p>
+                    <img src="images/projects/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
+                </div>
+                <div id="todo-list">
+                    <h3>To-do List Python</h3>
+                    <p>Lista "To-do" feita utilizando <strong>Python</strong>. A interface grafica foi feita utilizando a biblioteca <strong>"PyQT"</strong> e o salvamento dos dados foi feito utilizando o <strong>"Pandas"</strong> em um arquivo <strong>"csv"</strong>. A lista "To-do" facilita a programação de tarefas cotidianas.</p>
+                    <p class="project-btn"><a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">Ver codigo</a></p>
+                    <img src="images/projects/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
+                </div>
+            </section>
+        </main>
+        <a href="#ptHome" id="scrollBtn"><span class="material-symbols-outlined">arrow_upward</span></a>
+        <footer>
+            <p>&copy; 2023 - Site desenvolvido por <a href="https://github.com/nicolaskleinaraujo/" target="_blank"><strong>Nicolas Klein</strong></a>.</p>
+        </footer>
+    </div>
 
-            <div id="text-about">
+    <div id="en">
+        <header id="enHome">
+            <nav>
                 <ul>
-                    <li>Meu nome é <strong>Nicolas Klein</strong> e tenho 17 anos.</li>
-                    <li>Nasci e <strong>moro em Maringá-PR</strong></li>
-                    <li>Possuo <strong>fluência em inglês</strong></li>
-                    <li><strong>Comecei a estudar programação</strong> em outubro de <strong>2022</strong>.</li>
-                    <li>Estou <strong>finalizando o ensino médio</strong> e pretendo cursar <strong>Analise e Desenvolvimento de Sistemas</strong>.</li>
-                    <li>Faço projetos utilizando linguagens como: <strong>JavaScript, HTML, CSS e Python</strong>.</li>
-                    <li>Utilizo em meus projetos, tecnologias como <strong>Node.js e MongoDB</strong>.</li>
-                    <li>Meu principal hobby é jogar, meu gênero favorito é luta.</li>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#abilities">Abilities</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><button type="button" onclick="changeToPT()"><img src="images/others/br-flag.png" alt="Bandeira do Brasil"></button></li>
+                    <li><button type="button" onclick="changeToEN()"><img src="images/others/us-flag.png" alt="Bandeira dos Estados Unidos"></button></li>
                 </ul>
-            </div>
-        </section>
-
-        <section id="abilities">
-            <h2>Habilidades</h2>
-
-            <div id="python">
-                <img src="images/logos/python-logo.png" alt="Logo Python">
-                <p><strong>Python</strong> foi a primeira linguagem de programação que eu estudei. Consigo desenvolver <strong>interfaces gráficas e automações de atividades</strong>. Tenho conhecimento em bibliotecas como <strong>Pandas, PyQT, PyAutoGui e Selenium</strong>.</p>
-            </div>
-
-            <div id="html-css">
-                <p><strong>HTML e CSS</strong> são as principais linguagens que eu utilizo para <strong>estruturar e estilizar meus sites</strong>. Utilizo ferramentas como o <strong>Figma</strong> para uma <strong>pré-estruturação dos meus sites</strong>.</p>
-                <img src="images/logos/html-css-logo.png" alt="Logo HTML e CSS">
-            </div>
-
-            <div id="js">
-                <img src="images/logos/javascript-logo.png" alt="Logo JavaScript">
-                <p><strong>JavaScript</strong> é a <strong>principal linguagem</strong> que estudo hoje em dia. Utilizo ela tanto em <strong>sites</strong> quanto <strong>integrada ao "Node.js"</strong> para aplicações backend. Tenho conhecimento em <strong>server e banco de dados</strong>, para isso, utilizo o <strong>Express</strong> juntamente ao <strong>MongoDB</strong></p>
-            </div>
-        </section>
-
-        <section id="projects">
-            <h2>Projetos</h2>
-
-            <div id="node-login">
-                <h3>Login com Node.js</h3>
-                <p>Tela de login desenvolvida utilizando o framework <strong>"Express"</strong> no <strong>Node.js</strong> para o servidor e o banco de dados do <strong>MongoDB Atlas</strong> para salvar os dados de usuario. O site e a estilização foram feitas utilizando <strong>HTML e CSS</strong>.</p>
-                <p class="project-btn"><a href="#" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">Ver codigo</a></p>
-                <img src="images/projects/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
-            </div>
-
-            <div id="pomodoro-web">
-                <h3>Site Pomodoro</h3>
-                <p>Site para estudos que usa o metodo "Pomodoro". Site desenvolvido utilizando <strong>HTML, CSS e JavaScript</strong>. O site consiste em um timer customizado para melhor efetividade do seu estudo e uma lista "To-do" que ajuda na programação de tarefas.</p>
-                <p class="project-btn"><a href="https://nicolaskleinaraujo.github.io/pomodoro-web/" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/pomodoro-web" target="_blank">Ver codigo</a></p>
-                <img src="images/projects/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
-            </div>
-
-            <div id="todo-list">
-                <h3>To-do List Python</h3>
-                <p>Lista "To-do" feita utilizando <strong>Python</strong>. A interface grafica foi feita utilizando a biblioteca <strong>"PyQT"</strong> e o salvamento dos dados foi feito utilizando o <strong>"Pandas"</strong> em um arquivo <strong>"csv"</strong>. A lista "To-do" facilita a programação de tarefas cotidianas.</p>
-                <p class="project-btn"><a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">Ver codigo</a></p>
-                <img src="images/projects/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
-            </div>
-        </section>
-    </main>
-
-    <div id="scrollBtn"><span class="material-symbols-outlined">arrow_upward</span></div>
-
-    <footer>
-        <p>&copy; 2023 - Site desenvolvido por <a href="https://github.com/nicolaskleinaraujo/" target="_blank"><strong>Nicolas Klein</strong></a>.</p>
-    </footer>
+            </nav>
+            <h1>Nicolas<br>Klein</h1>
+        </header>
+        <main>
+            <section id="about-me">
+                <h2>About Me</h2>
+                <div id="socials">
+                    <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
+                    <ul>
+                        <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">My Github</a></li>
+                        <li><a href="#" target="_blank">My Linkedin</a></li>
+                        <li><a href="https://wa.me/5544997666224" target="_blank">My Whatsapp</a></li>
+                        <li>contatonkfa@gmail.com</li>
+                        <li>+55 44 99766-6224</li>
+                    </ul>
+                </div>
+                <div id="text-about">
+                    <ul>
+                        <li>My name is <strong>Nicolas Klein</strong> and I am 17 years old.</li>
+                        <li>I was born and <strong>live in Brazil</strong></li>
+                        <li>I have <strong>fluency in English</strong></li>
+                        <li><strong>I started studying programming</strong> in October <strong>2022</strong>.</li>
+                        <li>I am <strong>finishing High School</strong> and I intend to study <strong>Systems Analysis and Development</strong>.</li>
+                        <li>I create projects using languages such as: <strong>JavaScript, HTML, CSS and Python</strong>.</li>
+                        <li>In my projects, I use technologies such as <strong>Node.js and MongoDB</strong>.</li>
+                        <li>My main hobby is to gaming, my favorite genre is fighting.</li>
+                    </ul>
+                </div>
+            </section>
+            <section id="abilities">
+                <h2>Abilities</h2>
+                <div id="python">
+                    <img src="images/logos/python-logo.png" alt="Logo Python">
+                    <p><strong>Python</strong> was the first programming language I studied. I can develop <strong>graphical interfaces and activity automations</strong>. I have knowledge of libraries like <strong>Pandas, PyQT, PyAutoGui and Selenium</strong>.</p>
+                </div>
+                <div id="html-css">
+                    <p><strong>HTML e CSS</strong> are the main languages I use to <strong>structure and style my websites</strong>. I use tools like <strong>Figma</strong> to <strong>pré-structure my websites</strong>.</p>
+                    <img src="images/logos/html-css-logo.png" alt="Logo HTML e CSS">
+                </div>
+                <div id="js">
+                    <img src="images/logos/javascript-logo.png" alt="Logo JavaScript">
+                    <p><strong>JavaScript</strong> is the <strong>my language</strong> that I study nowadays. I use it both on <strong>websites</strong> and <strong>integrated with "Node.js"</strong> for backend applications. I have knowledge in <strong>servers and databases</strong>, for this, I use <strong>Express</strong> together with <strong>MongoDB</strong></p>
+                </div>
+            </section>
+            <section id="projects">
+                <h2>Projects</h2>
+                <div id="node-login">
+                    <h3>Login Page With Node.js</h3>
+                    <p>Login screen developed using the framework <strong>"Express"</strong> in <strong>Node.js</strong> for the server and the database of <strong>MongoDB Atlas</strong> to save user data. The website and styling were done using <strong>HTML and CSS</strong>.</p>
+                    <p class="project-btn"><a href="#" target="_blank">See site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">See code</a></p>
+                    <img src="images/projects/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
+                </div>
+                <div id="pomodoro-web">
+                    <h3>Pomodoro Website</h3>
+                    <p>Study site that uses the "Pomodoro" method. Website developed using <strong>HTML, CSS and JavaScript</strong>. The website consists of a customized timer to improve the effectiveness of your study and a "To-do" list that helps with scheduling tasks.</p>
+                    <p class="project-btn"><a href="https://nicolaskleinaraujo.github.io/pomodoro-web/" target="_blank">See site</a> <a href="https://github.com/nicolaskleinaraujo/pomodoro-web" target="_blank">See code</a></p>
+                    <img src="images/projects/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
+                </div>
+                <div id="todo-list">
+                    <h3>To-do List With Python</h3>
+                    <p>"To-do" list made using <strong>Python</strong>. The graphical interface was made using the library <strong>"PyQT"</strong> and the data saving was done using the <strong>"Pandas"</strong> in a <strong>"csv"</strong> file. The "To-do" list makes it easy to schedule everyday tasks.</p>
+                    <p class="project-btn"><a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">See code</a></p>
+                    <img src="images/projects/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
+                </div>
+            </section>
+        </main>
+        <a href="#enHome" id="scrollBtn"><span class="material-symbols-outlined">arrow_upward</span></a>
+        <footer>
+            <p>&copy; 2023 - Website developed by <a href="https://github.com/nicolaskleinaraujo/" target="_blank"><strong>Nicolas Klein</strong></a>.</p>
+        </footer>
+    </div>
 
     <script src="funcs.js"></script>
 </body>
