update on archives structure and added some text to html file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
-    <link rel="shortcut icon" href="images/icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media-query.css">
+    <link rel="shortcut icon" href="src/images/icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="stylesheet" href="src/styles/media-query.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
@@ -17,8 +17,8 @@
                     <li><a href="#about-me">Sobre Mim</a></li>
                     <li><a href="#abilities">Habilidades</a></li>
                     <li><a href="#projects">Projetos</a></li>
-                    <li><button type="button" onclick="changeToPT()" class="active" id="brBtn"><img src="images/others/br-flag.png" alt="Bandeira do Brasil"></button></li>
-                    <li><button type="button" onclick="changeToEN()" id="enBtn"><img src="images/others/us-flag.png" alt="Bandeira dos Estados Unidos"></button></li>
+                    <li><button type="button" onclick="changeToPT()" class="active" id="brBtn"><img src="src/images/others/br-flag.png" alt="Bandeira do Brasil"></button></li>
+                    <li><button type="button" onclick="changeToEN()" id="enBtn"><img src="src/images/others/us-flag.png" alt="Bandeira dos Estados Unidos"></button></li>
                 </ul>
             </nav>
             <h1>Nicolas<br>Klein</h1>
@@ -27,11 +27,11 @@
             <section id="about-me">
                 <h2>Sobre Mim</h2>
                 <div id="socials">
-                    <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
+                    <img src="src/images/others/my-photo.jpg" alt="Foto Pessoa">
                     <ul>
-                        <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Meu Github</a></li>
-                        <li><a href="#" target="_blank">Meu Linkedin</a></li>
-                        <li><a href="https://wa.me/5544997666224" target="_blank">Meu Whatsapp</a></li>
+                        <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Github</a></li>
+                        <li><a href="#" target="_blank">Linkedin</a></li>
+                        <li><a href="https://wa.me/5544997666224" target="_blank">Whatsapp</a></li>
                         <li>contatonkfa@gmail.com</li>
                         <li>+55 44 99766-6224</li>
                     </ul>
@@ -52,16 +52,16 @@
             <section id="abilities">
                 <h2>Habilidades</h2>
                 <div id="python">
-                    <img src="images/logos/python-logo.png" alt="Logo Python">
+                    <img src="src/images/logos/python-logo.png" alt="Logo Python">
                     <p><strong>Python</strong> foi a primeira linguagem de programação que eu estudei. Consigo desenvolver <strong>interfaces gráficas e automações de atividades</strong>. Tenho conhecimento em bibliotecas como <strong>Pandas, PyQT, PyAutoGui e Selenium</strong>.</p>
                 </div>
                 <div id="html-css">
                     <p><strong>HTML e CSS</strong> são as principais linguagens que eu utilizo para <strong>estruturar e estilizar meus sites</strong>. Utilizo ferramentas como o <strong>Figma</strong> para uma <strong>pré-estruturação dos meus sites</strong>.</p>
-                    <img src="images/logos/html-css-logo.png" alt="Logo HTML e CSS">
+                    <img src="src/images/logos/html-css-logo.png" alt="Logo HTML e CSS">
                 </div>
                 <div id="js">
-                    <img src="images/logos/javascript-logo.png" alt="Logo JavaScript">
-                    <p><strong>JavaScript</strong> é a <strong>principal linguagem</strong> que estudo hoje em dia. Utilizo ela tanto em <strong>sites</strong> quanto <strong>integrada ao "Node.js"</strong> para aplicações backend. Tenho conhecimento em <strong>server e banco de dados</strong>, para isso, utilizo o <strong>Express</strong> juntamente ao <strong>MongoDB</strong></p>
+                    <img src="src/images/logos/javascript-logo.png" alt="Logo JavaScript">
+                    <p><strong>JavaScript</strong> é a <strong>principal linguagem</strong> que estudo hoje em dia. Utilizo ela tanto em <strong>sites</strong> quanto <strong>integrada ao "Node.js"</strong> para aplicações backend. Tenho conhecimento em <strong>server e banco de dados</strong>, para isso, utilizo o <strong>Express</strong> juntamente ao <strong>MongoDB</strong>. Estou <strong>aprendendo React</strong></p>
                 </div>
             </section>
             <section id="projects">
@@ -70,19 +70,19 @@
                     <h3>Login com Node.js</h3>
                     <p>Tela de login desenvolvida utilizando o framework <strong>"Express"</strong> no <strong>Node.js</strong> para o servidor e o banco de dados do <strong>MongoDB Atlas</strong> para salvar os dados de usuario. O site e a estilização foram feitas utilizando <strong>HTML e CSS</strong>.</p>
                     <p class="project-btn"><a href="#" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">Ver codigo</a></p>
-                    <img src="images/projects-photos/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
+                    <img src="src/images/projects-photos/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
                 </div>
                 <div id="pomodoro-web">
                     <h3>Site Pomodoro</h3>
                     <p>Site para estudos que usa o metodo "Pomodoro". Site desenvolvido utilizando <strong>HTML, CSS e JavaScript</strong>. O site consiste em um timer customizado para melhor efetividade do seu estudo e uma lista "To-do" que ajuda na programação de tarefas.</p>
                     <p class="project-btn"><a href="https://nicolaskleinaraujo.github.io/pomodoro-web/" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/pomodoro-web" target="_blank">Ver codigo</a></p>
-                    <img src="images/projects-photos/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
+                    <img src="src/images/projects-photos/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
                 </div>
                 <div id="todo-list">
                     <h3>To-do List Python</h3>
                     <p>Lista "To-do" feita utilizando <strong>Python</strong>. A interface grafica foi feita utilizando a biblioteca <strong>"PyQT"</strong> e o salvamento dos dados foi feito utilizando o <strong>"Pandas"</strong> em um arquivo <strong>"csv"</strong>. A lista "To-do" facilita a programação de tarefas cotidianas.</p>
-                    <p class="project-btn"><a href="todo-list-project/todolist-app.zip" download="todolist-app.zip" onclick="showHelp()">Download</a> <a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">Ver codigo</a></p>
-                    <img src="images/projects-photos/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
+                    <p class="project-btn"><a href="src/assets/todolist-app.zip" download="todolist-app.zip" onclick="showHelp()">Download</a> <a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">Ver codigo</a></p>
+                    <img src="src/images/projects-photos/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
                 </div>
             </section>
         </main>
@@ -99,8 +99,8 @@
                     <li><a href="#about-me-en">About Me</a></li>
                     <li><a href="#abilities-en">Abilities</a></li>
                     <li><a href="#projects-en">Projects</a></li>
-                    <li><button type="button" onclick="changeToPT()"><img src="images/others/br-flag.png" alt="Bandeira do Brasil"></button></li>
-                    <li><button type="button" onclick="changeToEN()" class="active"><img src="images/others/us-flag.png" alt="Bandeira dos Estados Unidos"></button></li>
+                    <li><button type="button" onclick="changeToPT()"><img src="src/images/others/br-flag.png" alt="Bandeira do Brasil"></button></li>
+                    <li><button type="button" onclick="changeToEN()" class="active"><img src="src/images/others/us-flag.png" alt="Bandeira dos Estados Unidos"></button></li>
                 </ul>
             </nav>
             <h1>Nicolas<br>Klein</h1>
@@ -109,11 +109,11 @@
             <section id="about-me-en">
                 <h2>About Me</h2>
                 <div id="socials">
-                    <img src="images/others/my-photo.jpg" alt="Foto Pessoa">
+                    <img src="src/images/others/my-photo.jpg" alt="Foto Pessoa">
                     <ul>
-                        <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">My Github</a></li>
-                        <li><a href="#" target="_blank">My Linkedin</a></li>
-                        <li><a href="https://wa.me/5544997666224" target="_blank">My Whatsapp</a></li>
+                        <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Github</a></li>
+                        <li><a href="#" target="_blank">Linkedin</a></li>
+                        <li><a href="https://wa.me/5544997666224" target="_blank">Whatsapp</a></li>
                         <li>contatonkfa@gmail.com</li>
                         <li>+55 44 99766-6224</li>
                     </ul>
@@ -134,16 +134,16 @@
             <section id="abilities-en">
                 <h2>Abilities</h2>
                 <div id="python">
-                    <img src="images/logos/python-logo.png" alt="Logo Python">
+                    <img src="src/images/logos/python-logo.png" alt="Logo Python">
                     <p><strong>Python</strong> was the first programming language I studied. I can develop <strong>graphical interfaces and activity automations</strong>. I have knowledge of libraries like <strong>Pandas, PyQT, PyAutoGui and Selenium</strong>.</p>
                 </div>
                 <div id="html-css">
                     <p><strong>HTML and CSS</strong> are the main languages I use to <strong>structure and style my websites</strong>. I use tools like <strong>Figma</strong> to <strong>pré-structure my websites</strong>.</p>
-                    <img src="images/logos/html-css-logo.png" alt="Logo HTML e CSS">
+                    <img src="src/images/logos/html-css-logo.png" alt="Logo HTML e CSS">
                 </div>
                 <div id="js">
-                    <img src="images/logos/javascript-logo.png" alt="Logo JavaScript">
-                    <p><strong>JavaScript</strong> is <strong>my language</strong> that I study nowadays. I use it both on <strong>websites</strong> and <strong>integrated with "Node.js"</strong> for backend applications. I have knowledge in <strong>servers and databases</strong>, for this, I use <strong>Express</strong> together with <strong>MongoDB</strong></p>
+                    <img src="src/images/logos/javascript-logo.png" alt="Logo JavaScript">
+                    <p><strong>JavaScript</strong> is <strong>my language</strong> that I study nowadays. I use it both on <strong>websites</strong> and <strong>integrated with "Node.js"</strong> for backend applications. I have knowledge in <strong>servers and databases</strong>, for this, I use <strong>Express</strong> together with <strong>MongoDB</strong>. I'm <strong>learning "React"</strong>.</p>
                 </div>
             </section>
             <section id="projects-en">
@@ -152,19 +152,19 @@
                     <h3>Login Page With Node.js</h3>
                     <p>Login screen developed using the framework <strong>"Express"</strong> in <strong>Node.js</strong> for the server and the database of <strong>MongoDB Atlas</strong> to save user data. The website and styling were done using <strong>HTML and CSS</strong>.</p>
                     <p class="project-btn"><a href="#" target="_blank">See site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">See code</a></p>
-                    <img src="images/projects-photos/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
+                    <img src="src/images/projects-photos/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
                 </div>
                 <div id="pomodoro-web">
                     <h3>Pomodoro Website</h3>
                     <p>Study site that uses the "Pomodoro" method. Website developed using <strong>HTML, CSS and JavaScript</strong>. The website consists of a customized timer to improve the effectiveness of your study and a "To-do" list that helps with scheduling tasks.</p>
                     <p class="project-btn"><a href="https://nicolaskleinaraujo.github.io/pomodoro-web/" target="_blank">See site</a> <a href="https://github.com/nicolaskleinaraujo/pomodoro-web" target="_blank">See code</a></p>
-                    <img src="images/projects-photos/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
+                    <img src="src/images/projects-photos/pomodoro-web-img.jpg" alt="Print de um site Pomodoro" class="project-img">
                 </div>
                 <div id="todo-list">
                     <h3>To-do List With Python</h3>
                     <p>"To-do" list made using <strong>Python</strong>. The graphical interface was made using the library <strong>"PyQT"</strong> and the data saving was done using the <strong>"Pandas"</strong> in a <strong>"csv"</strong> file. The "To-do" list makes it easy to schedule everyday tasks.</p>
-                    <p class="project-btn"><a href="todo-list-project/todolist-app.zip" download="todolist-app.zip" onclick="showHelp()">Download</a> <a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">See code</a></p>
-                    <img src="images/projects-photos/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
+                    <p class="project-btn"><a href="src/assets/todolist-app.zip" download="todolist-app.zip" onclick="showHelp()">Download</a> <a href="https://github.com/nicolaskleinaraujo/todo-list" target="_blank">See code</a></p>
+                    <img src="src/images/projects-photos/todo-list-img.jpg" alt="Print de uma lista to-do" class="project-img">
                 </div>
             </section>
         </main>
@@ -174,6 +174,6 @@
         </footer>
     </div>
 
-    <script src="funcs.js"></script>
+    <script src="src/scripts/funcs.js"></script>
 </body>
 </html>
