added a temporary function because my site is not hosted

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div id="node-login">
                     <h3>Login com Node.js</h3>
                     <p>Tela de login desenvolvida utilizando o framework <strong>"Express"</strong> no <strong>Node.js</strong> para o servidor e o banco de dados do <strong>MongoDB Atlas</strong> para salvar os dados de usuario. O site e a estilização foram feitas utilizando <strong>HTML e CSS</strong>.</p>
-                    <p class="project-btn"><a href="#" target="_blank">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">Ver codigo</a></p>
+                    <p class="project-btn"><a onclick="notHosted()" class="node-btn">Ver site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">Ver codigo</a></p>
                     <img src="src/images/projects-photos/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
                 </div>
                 <div id="pomodoro-web">
@@ -151,7 +151,7 @@
                 <div id="node-login">
                     <h3>Login Page With Node.js</h3>
                     <p>Login screen developed using the framework <strong>"Express"</strong> in <strong>Node.js</strong> for the server and the database of <strong>MongoDB Atlas</strong> to save user data. The website and styling were done using <strong>HTML and CSS</strong>.</p>
-                    <p class="project-btn"><a href="#" target="_blank">See site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">See code</a></p>
+                    <p class="project-btn"><a onclick="notHosted()" class="node-btn">See site</a> <a href="https://github.com/nicolaskleinaraujo/node-login" target="_blank">See code</a></p>
                     <img src="src/images/projects-photos/node-login-img.jpg" alt="Print de uma tela de login" class="project-img">
                 </div>
                 <div id="pomodoro-web">
