--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="src/images/others/my-photo.jpg" alt="Foto Pessoa">
                     <ul>
                         <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Github</a></li>
-                        <li><a href="#" target="_blank">Linkedin</a></li>
+                        <li><a href="https://www.linkedin.com/in/nicolaskleinaraujo/" target="_blank">Linkedin</a></li>
                         <li><a href="https://wa.me/5544997666224" target="_blank">Whatsapp</a></li>
                         <li>contatonkfa@gmail.com</li>
                         <li>+55 44 99766-6224</li>
@@ -112,7 +112,7 @@
                     <img src="src/images/others/my-photo.jpg" alt="Foto Pessoa">
                     <ul>
                         <li><a href="https://github.com/nicolaskleinaraujo" target="_blank">Github</a></li>
-                        <li><a href="#" target="_blank">Linkedin</a></li>
+                        <li><a href="https://www.linkedin.com/in/nicolaskleinaraujo/" target="_blank">Linkedin</a></li>
                         <li><a href="https://wa.me/5544997666224" target="_blank">Whatsapp</a></li>
                         <li>contatonkfa@gmail.com</li>
                         <li>+55 44 99766-6224</li>
