update on portuguese infos

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
                         <li>Meu nome é <strong>Nicolas Klein</strong> e tenho 17 anos.</li>
                         <li>Nasci e <strong>moro em Maringá-PR</strong></li>
                         <li>Possuo <strong>proficiência em inglês</strong></li>
-                        <li><strong>Comecei a estudar programação</strong> em outubro de <strong>2022</strong>.</li>
-                        <li>Estou <strong>finalizando o ensino médio</strong> e pretendo cursar <strong>Analise e Desenvolvimento de Sistemas</strong>.</li>
-                        <li>Faço projetos utilizando linguagens como: <strong>JavaScript, HTML, CSS e Python</strong>.</li>
-                        <li>Utilizo em meus projetos, tecnologias como <strong>Node.js e MongoDB</strong>.</li>
+                        <li>Estou <strong>cursando Análise e Desenvolvimento de Sistemas</strong>.</li>
+                        <li>A principal linguagem que utilizo é o <strong>JavaScript</strong>.</li>
+                        <li>Estudo <strong>desenvolvimento web</strong>, utilizo tecnologias como: <strong>Node.js e React</strong>.</li>
                         <li>Meu principal hobby é jogar, meu gênero favorito é luta.</li>
                     </ul>
                 </div>
