--- a/index.html
+++ b/index.html
@@ -122,10 +122,9 @@
                         <li>My name is <strong>Nicolas Klein</strong> and I am 17 years old.</li>
                         <li>I was born and <strong>live in Brazil</strong></li>
                         <li>I have <strong>proficiency in English</strong></li>
-                        <li><strong>I started studying programming</strong> in October <strong>2022</strong>.</li>
-                        <li>I am <strong>finishing High School</strong> and I intend to study <strong>Systems Analysis and Development</strong>.</li>
-                        <li>I create projects using languages such as: <strong>JavaScript, HTML, CSS and Python</strong>.</li>
-                        <li>In my projects, I use technologies such as <strong>Node.js and MongoDB</strong>.</li>
+                        <li>I'm <strong>studying Systems Analysis and Development</strong>.</li>
+                        <li>The main language I use is <strong>JavaScript</strong>.</li>
+                        <li>I study <strong>web development, </strong>I use tecnologias such as: <strong>Node.js and React</strong>.</li>
                         <li>My main hobby is to gaming, my favorite genre is fighting.</li>
                     </ul>
                 </div>
